<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fjaroca.kingmakerpathfindertool.NewReign">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reignName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/data_reign_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/campaignName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/data_campaign_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reignName" />

        <TextView
            android:id="@+id/alignmentReignText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_alignment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campaignName" />

        <Spinner
            android:id="@+id/alignmentReign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignmentReignText" />

        <TextView
            android:id="@+id/sizeReignText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_size"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@+id/sizeReignNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alignmentReign" />

        <TextView
            android:id="@+id/sizeReignNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sizeReignText"
            app:layout_constraintTop_toBottomOf="@+id/alignmentReign" />

        <SeekBar
            android:id="@+id/sizeReign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:max="10"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeReignText" />

        <TextView
            android:id="@+id/controlDC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_control_DC"
            app:layout_constraintEnd_toStartOf="@+id/population"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeReign" />

        <TextView
            android:id="@+id/population"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_population"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/controlDC"
            app:layout_constraintTop_toBottomOf="@+id/sizeReign" />

        <TextView
            android:id="@+id/stability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_stability"
            app:layout_constraintEnd_toStartOf="@+id/stabilityNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/controlDC" />

        <TextView
            android:id="@+id/stabilityNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stability"
            app:layout_constraintTop_toBottomOf="@+id/controlDC" />

        <TextView
            android:id="@+id/economy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_economy"
            app:layout_constraintEnd_toStartOf="@+id/economyNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stability" />

        <TextView
            android:id="@+id/economyNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/economy"
            app:layout_constraintTop_toBottomOf="@+id/stability" />

        <TextView
            android:id="@+id/loyalty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_loyalty"
            app:layout_constraintEnd_toStartOf="@+id/loyaltyNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/economy" />

        <TextView
            android:id="@+id/loyaltyNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loyalty"
            app:layout_constraintTop_toBottomOf="@+id/economy" />

        <TextView
            android:id="@+id/unrest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_unrest"
            app:layout_constraintEnd_toStartOf="@+id/unrestNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loyalty" />

        <TextView
            android:id="@+id/unrestNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/unrest"
            app:layout_constraintTop_toBottomOf="@+id/loyalty" />

        <TextView
            android:id="@+id/consumption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_consumption"
            app:layout_constraintEnd_toStartOf="@+id/treasury"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unrest" />

        <TextView
            android:id="@+id/treasury"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_treasury"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/consumption"
            app:layout_constraintTop_toBottomOf="@+id/unrest" />

        <TextView
            android:id="@+id/specialResources"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/data_reign_special_resources"
            app:layout_constraintEnd_toStartOf="@+id/specialResourcesNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consumption" />

        <TextView
            android:id="@+id/specialResourcesNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/specialResources"
            app:layout_constraintTop_toBottomOf="@+id/consumption" />

        <Button
            android:id="@+id/leadershipButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="leadershipReign"
            android:text="@string/leadership_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specialResources" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
